# pipeline_visualisation

./: .gitignore  CMakeLists.txt  README.md  clean.sh  csv_loader.cpp  instancing_test.cpp  main.cpp  parquet_reader.cpp  reader.cpp  run.sh
include/linux/assimp/: revision.h
include/linux/glad/: glad.h
include/windows/assimp/: revision.h
include/windows/glad/: glad.h
lib/: cmake_install.cmake  libglfw.so.3.4
lib/linux/: assimp  libGLU.so.1  libX11-xcb.so.1.0.0  libglib-2.0.so.0  libharfbuzz.so.0  libpng16.so.16  libpng16.so.16.48.0
src/: app.cpp  app.h  bar_chart.h  camera.h  clusters.cpp  clusters.h  cubemap.h  mesh.h  objects.h  paper_loader.cpp  paper_loader.h  shader.h  shapes.h  terrain.cpp  texture.cpp  texture.h  util.h
src/opengl/: app.cpp  app.h  camera.h  fonts.cpp  fonts.h  mesh.cpp  model.cpp  model.h  objectShapes3D.h  postprocessing.h  shader.cpp  shapes.h  skybox.h  terrain.h
src/shaders/: cluster.frag  cluster.vert  points.frag  points.geom  points.vert  pointsLighting.frag  pointsLighting.vert  quad.frag  quad.vert  ui.frag
src/shaders/builtin/: fonts.frag  fonts.vert  heightMap.vert  lighting.frag  lighting.vert  screenShader.frag  screenShader.vert  texCube.frag  texCube.vert
